[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "redis-work-queue"
version = "0.1.5"
description = "A work queue, on top of a redis database, with implementations in Python, Rust, Go, Node.js (TypeScript) and Dotnet (C#)."
dependencies = ["redis", "uuid"]
authors = [
    { name = "Jacob O'Toole", email = "jacob.otoole@mevitae.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
