[package]
name = "redis-work-queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
futures = "0.3"

[dependencies.redis]
version = "0.22.3"
features = ["aio", "async-std-comp", "connection-manager"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.uuid]
version = "1.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
